Fix: Update logo SVG path in brief/index.html

--- a/brief/index.html
+++ b/brief/index.html
@@ -6,6 +6,43 @@
         <title>George Mocreac - Brief</title>
         <link href="src/output.css" rel="stylesheet" />
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
+        <meta
+            name="description"
+            content="George Mocreac - Designer -> Branding | Product Design"
+        />
+        <meta
+            name="keywords"
+            content="George Mocreac, Mocreac, George, Designer, Product, portfolio, branding, logo, web development, projects"
+        />
+
+        <!-- Open Graph / Facebook -->
+        <meta property="og:type" content="website" />
+        <meta
+            property="og:url"
+            content="https://www.yourwebsite.com/brief.html"
+        />
+        <meta property="og:title" content="George Mocreac - Brief" />
+        <meta
+            property="og:description"
+            content="George Mocreac - Designer -> Branding | Product Design"
+        />
+
+
+        <!-- Twitter -->
+        <meta property="twitter:card" content="summary_large_image" />
+        <meta
+            property="twitter:url"
+            content="https://www.yourwebsite.com/brief.html"
+        />
+        <meta property="twitter:title" content="George Mocreac - Brief" />
+        <meta
+            property="twitter:description"
+            content="George Mocreac - Designer -> Branding | Product Design"
+        />
+
+
+        <link href="src/output.css" rel="stylesheet" />
+    </head>
     </head>
     <body style="width: 100vw; height: 100vh; margin: 0; padding: 0">
         <header
@@ -13,7 +50,7 @@
         >
             <a href="https://mocreac.com" class="flex flex-grow justify-start"
                 ><img
-                    src="./public/logo.svg"
+                    src="../public/logo.svg"
                     alt="George Mocreac Logo"
                     class="w-6 h-6"
             /></a>
